#--------------------------------------------------------------------------------------------------#
#                                                                                                  #
#         ,-.              ;-.          This file is part of OpenPie.                              #
#       /   \             |  ) o                                                                   #
#      |   | ;-. ,-. ;-. |-'  . ,-.     This software may be modified and distributed              #
#     \   / | | |-' | | |    | |-'      under the terms of the MIT license.                        #
#     `-'  |-' `-' ' ' '    ' `-'       See the LICENSE file for details.                          #
#         '                                                                                        #
#--------------------------------------------------------------------------------------------------#

add_subdirectory(LinearMenu)
